// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"edit artworks" button does not render an edit button if there are no artworks 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;

exports[`"edit artworks" button renders a disabled edit button if there are artworks, but none selected 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c5 {
  font-family: 'ITC Avant Garde Gothic W04','AvantGardeGothicITCW01D 731075',AvantGardeGothicITCW01Dm,Helvetica,sans-serif;
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 13px;
  line-height: 1.65em;
  background: #e5e5e5;
  color: rgba(0,0,0,0.5);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px 30px;
  line-height: 1;
  outline: 0;
  -webkit-transition: background-color 0.25s,color 0.25s;
  transition: background-color 0.25s,color 0.25s;
  margin: 10px;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2px;
}

.c5:hover:not(:disabled) {
  cursor: pointer;
  background: #cccccc;
}

.c4 {
  margin: 0;
  width: 100%;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
  <button
    className="c4 c5"
    disabled={true}
  >
    <span>
      Edit Artworks
    </span>
  </button>
</div>
`;

exports[`"edit artworks" button renders an enabled edit button if there are selected artworks 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c6 {
  font-family: 'ITC Avant Garde Gothic W04','AvantGardeGothicITCW01D 731075',AvantGardeGothicITCW01Dm,Helvetica,sans-serif;
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 13px;
  line-height: 1.65em;
  background: #e5e5e5;
  color: black;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px 30px;
  line-height: 1;
  outline: 0;
  -webkit-transition: background-color 0.25s,color 0.25s;
  transition: background-color 0.25s,color 0.25s;
  margin: 10px;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2px;
}

.c6:hover:not(:disabled) {
  cursor: pointer;
  background: #cccccc;
}

.c5 {
  background: black;
  color: white;
}

.c5:hover:not(:disabled) {
  background: #6e1fff;
}

.c8 {
  color: #666666;
}

.c4 {
  margin: 0;
  width: 100%;
}

.c7 {
  display: block;
  margin-top: 1em;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
  <button
    className="c4 c5 c6"
    onClick={undefined}
  >
    <span>
      Edit Artworks
    </span>
  </button>
  <a
    className="c7 c8"
    href="http://helix/genome/artworks?artwork_ids="
    target="_blank"
  >
    Open selected works in Helix
  </a>
</div>
`;

exports[`does not render attribution class autosuggest if it is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c4 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c4:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c4 .filter {
  margin-top: 1em;
}

.c4 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c4 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Attribution Class
      </h2>
      <div
        className="c1"
      >
        Ephemera
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;

exports[`does not render fair autosuggest if fair is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c4 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c4:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c4 .filter {
  margin-top: 1em;
}

.c4 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c4 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Fair
      </h2>
      <div
        className="c1"
      >
        Nice Fair
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;

exports[`does not render partner autosuggest if partner is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c4 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c4:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c4 .filter {
  margin-top: 1em;
}

.c4 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c4 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Partner
      </h2>
      <div
        className="c1"
      >
        Nice Gallery
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;
